--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/defaults/main.yml
@@ -17,6 +17,9 @@ calibre_ports:
 
 calibre_env_vars: {}
 
+calibre_secrets: {}
+calibre_container_secrets: []
+
 calibre_container_labels: {}
 
 calibre_quadlet_options: []
