--- a/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/calibre/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-calibre_env_vars_base: "{{ common_env_vars_base }}"
+calibre_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+calibre_secrets_base: {}
+
+calibre_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
