--- a/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/defaults/main.yml
@@ -22,6 +22,11 @@ karakeep_env_vars: {}
 karakeep_chrome_env_vars: {}
 karakeep_meilisearch_env_vars: {}
 
+karakeep_secrets: {}
+karakeep_container_secrets: []
+karakeep_chrome_container_secrets: []
+karakeep_meilisearch_container_secrets: []
+
 karakeep_container_labels: {}
 karakeep_chrome_container_labels: {}
 karakeep_meilisearch_container_labels: {}
