--- a/collections/ansible_collections/jaredhocutt/homelab/roles/open_webui/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/open_webui/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-open_webui_env_vars_base: "{{ common_env_vars_base }}"
+open_webui_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+open_webui_secrets_base: {}
+
+open_webui_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
