--- a/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/defaults/main.yml
@@ -15,6 +15,9 @@ overseerr_ports:
 
 overseerr_env_vars: {}
 
+overseerr_secrets: {}
+overseerr_container_secrets: []
+
 overseerr_container_labels: {}
 
 overseerr_quadlet_options: []
