--- a/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/overseerr/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-overseerr_env_vars_base: "{{ common_env_vars_base }}"
+overseerr_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+overseerr_secrets_base: {}
+
+overseerr_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
