--- a/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/portainer/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-portainer_env_vars_base: "{{ common_env_vars_base }}"
+portainer_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+portainer_secrets_base: {}
+
+portainer_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
