--- a/collections/ansible_collections/jaredhocutt/homelab/roles/prowlarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/prowlarr/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-prowlarr_env_vars_base: "{{ common_env_vars_base }}"
+prowlarr_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+prowlarr_secrets_base: {}
+
+prowlarr_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
