--- a/collections/ansible_collections/jaredhocutt/homelab/roles/radarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/radarr/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-radarr_env_vars_base: "{{ common_env_vars_base }}"
+radarr_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+radarr_secrets_base: {}
+
+radarr_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
