--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sabnzbd/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-sabnzbd_env_vars_base: "{{ common_env_vars_base }}"
+sabnzbd_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+sabnzbd_secrets_base: {}
+
+sabnzbd_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
