--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/defaults/main.yml
@@ -17,6 +17,9 @@ sonarr_ports:
 
 sonarr_env_vars: {}
 
+sonarr_secrets: {}
+sonarr_container_secrets: []
+
 sonarr_container_labels: {}
 
 sonarr_quadlet_options: []
