--- a/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/sonarr/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-sonarr_env_vars_base: "{{ common_env_vars_base }}"
+sonarr_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+sonarr_secrets_base: {}
+
+sonarr_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
