--- a/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/stirling_pdf/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-stirling_pdf_env_vars_base: "{{ common_env_vars_base }}"
+stirling_pdf_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+stirling_pdf_secrets_base: {}
+
+stirling_pdf_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
