--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tandoor/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tandoor/defaults/main.yml
@@ -20,6 +20,10 @@ tandoor_ports:
 tandoor_env_vars: {}
 tandoor_postgres_env_vars: {}
 
+tandoor_secrets: {}
+tandoor_container_secrets: []
+tandoor_postgres_container_secrets: []
+
 tandoor_container_labels: {}
 tandoor_postgres_container_labels: {}
 
