--- a/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/tautulli/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-tautulli_env_vars_base: "{{ common_env_vars_base }}"
+tautulli_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+tautulli_secrets_base: {}
+
+tautulli_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
