--- a/collections/ansible_collections/jaredhocutt/homelab/roles/vault/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/vault/defaults/main.yml
@@ -17,6 +17,9 @@ vault_ports:
 
 vault_env_vars: {}
 
+vault_secrets: {}
+vault_container_secrets: []
+
 vault_container_labels: {}
 
 vault_quadlet_options: []
