--- a/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/vault/vars/main.yml
@@ -8,7 +8,15 @@ vault_gid: 1000
 # Envrionment Variables
 ###############################################################################
 
-vault_env_vars_base: "{{ common_env_vars_base }}"
+vault_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+vault_secrets_base: {}
+
+vault_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
