--- a/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/archiveium/tasks/main.yml
@@ -46,6 +46,14 @@
     - name: "{{ archiveium_meilisearch_volume_data }}"
       options: "{{ archiveium_meilisearch_volume_data_options | default(omit) }}"
 
+- name: Create secrets
+  containers.podman.podman_secret:
+    name: "{{ item.key }}"
+    data: "{{ item.value }}"
+    state: present
+  become: true
+  loop: "{{ archiveium_secrets_base | combine(archiveium_secrets, recursive=True) | dict2items }}"
+
 - name: Reload systemd daemon
   ansible.builtin.systemd:
     daemon_reload: true
@@ -79,7 +87,13 @@
     name: "{{ archiveium_name }}-postgres"
     image: "{{ archiveium_postgres_image }}:{{ archiveium_postgres_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: "{{ archiveium_postgres_env_vars_base | combine(archiveium_postgres_env_vars, recursive=True) }}"
+    env: >-
+      {{ common_env_vars_base
+      | combine(archiveium_postgres_env_vars_base, recursive=True)
+      | combine(archiveium_postgres_env_vars, recursive=True) }}
+    secrets: >-
+      {{ archiveium_postgres_container_secrets_base
+      + archiveium_postgres_container_secrets }}
     volumes:
       - "{{ archiveium_postgres_volume_data }}.volume:/var/lib/postgresql/data"
     healthcheck_interval: 30s
@@ -99,7 +113,13 @@
     name: "{{ archiveium_name }}-minio"
     image: "{{ archiveium_minio_image }}:{{ archiveium_minio_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: "{{ archiveium_minio_env_vars_base | combine(archiveium_minio_env_vars, recursive=True) }}"
+    env: >-
+      {{ common_env_vars_base
+      | combine(archiveium_minio_env_vars_base, recursive=True)
+      | combine(archiveium_minio_env_vars, recursive=True) }}
+    secrets: >-
+      {{ archiveium_minio_container_secrets_base
+      + archiveium_minio_container_secrets }}
     volumes:
       - "{{ archiveium_minio_volume_data }}.volume:/data/minio"
     healthcheck_interval: 30s
@@ -121,7 +141,13 @@
     name: "{{ archiveium_name }}-redis"
     image: "{{ archiveium_redis_image }}:{{ archiveium_redis_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: "{{ archiveium_redis_env_vars_base | combine(archiveium_redis_env_vars, recursive=True) }}"
+    env: >-
+      {{ common_env_vars_base
+      | combine(archiveium_redis_env_vars_base, recursive=True)
+      | combine(archiveium_redis_env_vars, recursive=True) }}
+    secrets: >-
+      {{ archiveium_redis_container_secrets_base
+      + archiveium_redis_container_secrets }}
     volumes:
       - "{{ archiveium_redis_volume_data }}.volume:/data"
     healthcheck_interval: 30s
@@ -142,7 +168,13 @@
     name: "{{ archiveium_name }}-meilisearch"
     image: "{{ archiveium_meilisearch_image }}:{{ archiveium_meilisearch_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: "{{ archiveium_meilisearch_env_vars_base | combine(archiveium_meilisearch_env_vars, recursive=True) }}"
+    env: >-
+      {{ common_env_vars_base
+      | combine(archiveium_meilisearch_env_vars_base, recursive=True)
+      | combine(archiveium_meilisearch_env_vars, recursive=True) }}
+    secrets: >-
+      {{ archiveium_meilisearch_container_secrets_base
+      + archiveium_meilisearch_container_secrets }}
     volumes:
       - "{{ archiveium_meilisearch_volume_data }}.volume:/meili_data"
     publish: "{{ archiveium_traefik_enable | ternary(omit, archiveium_meilisearch_ports) }}"
@@ -158,7 +190,13 @@
     name: "{{ archiveium_name }}-cron"
     image: "{{ archiveium_image }}:{{ archiveium_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: "{{ archiveium_cron_env_vars_base | combine(archiveium_cron_env_vars, recursive=True) }}"
+    env: >-
+      {{ common_env_vars_base
+      | combine(archiveium_cron_env_vars_base, recursive=True)
+      | combine(archiveium_cron_env_vars, recursive=True) }}
+    secrets: >-
+      {{ archiveium_cron_container_secrets_base
+      + archiveium_cron_container_secrets }}
     volumes:
       - "{{ archiveium_volume_config }}.volume:/app/config"
     healthcheck_interval: 30s
@@ -178,7 +216,13 @@
     name: "{{ archiveium_name }}"
     image: "{{ archiveium_image }}:{{ archiveium_image_tag }}"
     network: "{{ archiveium_name }}.network"
-    env: "{{ archiveium_env_vars_base | combine(archiveium_env_vars, recursive=True) }}"
+    env: >-
+      {{ common_env_vars_base
+      | combine(archiveium_env_vars_base, recursive=True)
+      | combine(archiveium_env_vars, recursive=True) }}
+    secrets: >-
+      {{ archiveium_container_secrets_base
+      + archiveium_container_secrets }}
     volumes:
       - "{{ archiveium_volume_config }}.volume:/app/config"
     healthcheck_interval: 30s
