--- a/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/authentik/vars/main.yml
@@ -10,18 +10,40 @@ authentik_postgres_user: authentik
 
 authentik_env_vars_base:
   AUTHENTIK_POSTGRESQL__HOST: "{{ authentik_name }}-postgres"
-  AUTHENTIK_POSTGRESQL__NAME: "{{ authentik_postgres_db_name }}"
-  AUTHENTIK_POSTGRESQL__USER: "{{ authentik_postgres_user }}"
-  AUTHENTIK_POSTGRESQL__PASSWORD: "{{ authentik_postgres_password }}"
   AUTHENTIK_REDIS__HOST: "{{ authentik_name }}-redis"
-  AUTHENTIK_SECRET_KEY: "{{ authentik_secret_key }}"
 
-authentik_postgres_env_vars_base:
-  POSTGRES_DB: "{{ authentik_postgres_db_name }}"
-  POSTGRES_USER: "{{ authentik_postgres_user }}"
-  POSTGRES_PASSWORD: "{{ authentik_postgres_password }}"
+authentik_postgres_env_vars_base: {}
 
 authentik_redis_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+authentik_secrets_base:
+  authentik_postgres_db_name: "{{ authentik_postgres_db_name }}"
+  authentik_postgres_user: "{{ authentik_postgres_user }}"
+  authentik_postgres_password: "{{ authentik_postgres_password }}"
+  authentik_secret_key: "{{ authentik_secret_key }}"
+
+authentik_container_secrets_base:
+  - authentik_postgres_db_name,type=env,target=AUTHENTIK_POSTGRESQL__NAME
+  - authentik_postgres_user,type=env,target=AUTHENTIK_POSTGRESQL__USER
+  - authentik_postgres_password,type=env,target=AUTHENTIK_POSTGRESQL__PASSWORD
+  - authentik_secret_key,type=env,target=AUTHENTIK_SECRET_KEY
+
+authentik_worker_container_secrets_base:
+  - authentik_postgres_db_name,type=env,target=AUTHENTIK_POSTGRESQL__NAME
+  - authentik_postgres_user,type=env,target=AUTHENTIK_POSTGRESQL__USER
+  - authentik_postgres_password,type=env,target=AUTHENTIK_POSTGRESQL__PASSWORD
+  - authentik_secret_key,type=env,target=AUTHENTIK_SECRET_KEY
+
+authentik_postgres_container_secrets_base:
+  - authentik_postgres_db_name,type=env,target=POSTGRES_DB
+  - authentik_postgres_user,type=env,target=POSTGRES_USER
+  - authentik_postgres_password,type=env,target=POSTGRES_PASSWORD
+
+authentik_redis_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
