--- a/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/defaults/main.yml
@@ -32,6 +32,12 @@ bar_assistant_salt_rim_env_vars: {}
 bar_assistant_redis_env_vars: {}
 bar_assistant_meilisearch_env_vars: {}
 
+bar_assistant_secrets: {}
+bar_assistant_container_secrets: []
+bar_assistant_salt_rim_container_secrets: []
+bar_assistant_redis_container_secrets: []
+bar_assistant_meilisearch_container_secrets: []
+
 bar_assistant_container_labels: {}
 bar_assistant_salt_rim_container_labels: {}
 bar_assistant_redis_container_labels: {}
