--- a/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/bar_assistant/vars/main.yml
@@ -5,7 +5,7 @@
 # Envrionment Variables
 ###############################################################################
 
-bar_assistant_env_vars_base_custom:
+bar_assistant_env_vars_base:
   APP_URL: "{{ bar_assistant_api_url }}"
   MEILISEARCH_KEY: $MEILI_MASTER_KEY
   MEILISEARCH_HOST: http://{{ bar_assistant_name }}-meilisearch:7700
@@ -13,19 +13,31 @@ bar_assistant_env_vars_base_custom:
   CACHE_DRIVER: redis
   SESSION_DRIVER: redis
   ALLOW_REGISTRATION: "true"
-bar_assistant_env_vars_base: "{{ common_env_vars_base | combine(bar_assistant_env_vars_base_custom, recursive=True) }}"
 
-bar_assistant_salt_rim_env_vars_base_custom:
+bar_assistant_salt_rim_env_vars_base:
   API_URL: "{{ bar_assistant_api_url }}"
   MEILISEARCH_URL: "{{ bar_assistant_meilisearch_url }}"
-bar_assistant_salt_rim_env_vars_base: "{{ common_env_vars_base | combine(bar_assistant_salt_rim_env_vars_base_custom, recursive=True) }}"
 
-bar_assistant_redis_env_vars_base: "{{ common_env_vars_base }}"
+bar_assistant_redis_env_vars_base: {}
 
-bar_assistant_meilisearch_env_vars_base_custom:
+bar_assistant_meilisearch_env_vars_base:
   MEILI_NO_ANALYTICS: "true"
-  MEILI_MASTER_KEY: "{{ bar_assistant_meilisearch_master_key }}"
-bar_assistant_meilisearch_env_vars_base: "{{ common_env_vars_base | combine(bar_assistant_meilisearch_env_vars_base_custom, recursive=True) }}"
+
+###############################################################################
+# Secrets
+###############################################################################
+
+bar_assistant_secrets_base:
+  bar_assistant_meilisearch_master_key: "{{ bar_assistant_meilisearch_master_key }}"
+
+bar_assistant_container_secrets_base: []
+
+bar_assistant_salt_rim_container_secrets_base: []
+
+bar_assistant_redis_container_secrets_base: []
+
+bar_assistant_meilisearch_container_secrets_base:
+  - bar_assistant_meilisearch_master_key,type=env,target=MEILI_MASTER_KEY
 
 ###############################################################################
 # Container Labels
