--- a/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/changedetection/defaults/main.yml
@@ -18,6 +18,10 @@ changedetection_ports:
 changedetection_env_vars: {}
 changedetection_browser_env_vars: {}
 
+changedetection_secrets: {}
+changedetection_container_secrets: []
+changedetection_browser_container_secrets: []
+
 changedetection_container_labels: {}
 changedetection_browser_container_labels: {}
 
