--- a/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/homarr/defaults/main.yml
@@ -15,6 +15,9 @@ homarr_ports:
 
 homarr_env_vars: {}
 
+homarr_secrets: {}
+homarr_container_secrets: []
+
 homarr_container_labels: {}
 
 homarr_quadlet_options: []
