--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/defaults/main.yml
@@ -27,6 +27,12 @@ immich_machine_learning_env_vars: {}
 immich_postgres_env_vars: {}
 immich_redis_env_vars: {}
 
+immich_secrets: {}
+immich_container_secrets: []
+immich_machine_learning_container_secrets: []
+immich_postgres_container_secrets: []
+immich_redis_container_secrets: []
+
 immich_container_labels: {}
 immich_machine_learning_container_labels: {}
 immich_postgres_container_labels: {}
