--- a/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/immich/vars/main.yml
@@ -8,24 +8,42 @@ immich_postgres_user: immich
 # Envrionment Variables
 ###############################################################################
 
-immich_env_vars_base_custom:
+immich_env_vars_base:
   DB_HOSTNAME: "{{ immich_name }}-postgres"
-  DB_DATABASE_NAME: "{{ immich_postgres_db_name }}"
-  DB_USERNAME: "{{ immich_postgres_user }}"
-  DB_PASSWORD: "{{ immich_postgres_password }}"
   REDIS_HOSTNAME: "{{ immich_name }}-redis"
-immich_env_vars_base: "{{ common_env_vars_base | combine(immich_env_vars_base_custom, recursive=True) }}"
 
-immich_machine_learning_env_vars_base: "{{ common_env_vars_base }}"
+immich_machine_learning_env_vars_base: {}
 
-immich_postgres_env_vars_base_custom:
-  POSTGRES_DB: "{{ immich_postgres_db_name }}"
-  POSTGRES_USER: "{{ immich_postgres_user }}"
-  POSTGRES_PASSWORD: "{{ immich_postgres_password }}"
+immich_postgres_env_vars_base:
   POSTGRES_INITDB_ARGS: --data-checksums
-immich_postgres_env_vars_base: "{{ common_env_vars_base | combine(immich_postgres_env_vars_base_custom, recursive=True) }}"
 
-immich_redis_env_vars_base: "{{ common_env_vars_base }}"
+immich_redis_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+immich_secrets_base:
+  immich_postgres_db_name: "{{ immich_postgres_db_name }}"
+  immich_postgres_user: "{{ immich_postgres_user }}"
+  immich_postgres_password: "{{ immich_postgres_password }}"
+
+immich_container_secrets_base:
+  - immich_postgres_db_name,type=env,target=DB_DATABASE_NAME
+  - immich_postgres_user,type=env,target=DB_USERNAME
+  - immich_postgres_password,type=env,target=DB_PASSWORD
+
+immich_machine_learning_container_secrets_base:
+  - immich_postgres_db_name,type=env,target=DB_DATABASE_NAME
+  - immich_postgres_user,type=env,target=DB_USERNAME
+  - immich_postgres_password,type=env,target=DB_PASSWORD
+
+immich_postgres_container_secrets_base:
+  - immich_postgres_db_name,type=env,target=POSTGRES_DB
+  - immich_postgres_user,type=env,target=POSTGRES_USER
+  - immich_postgres_password,type=env,target=POSTGRES_PASSWORD
+
+immich_redis_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
