--- a/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/karakeep/vars/main.yml
@@ -5,20 +5,32 @@
 # Envrionment Variables
 ###############################################################################
 
-karakeep_env_vars_base_custom:
+karakeep_env_vars_base:
   MEILI_ADDR: http://{{ karakeep_name }}-meilisearch:7700
   BROWSER_WEB_URL: http://{{ karakeep_name }}-chrome:9222
   DATA_DIR: /data
   NEXTAUTH_URL: "{{ karakeep_nextauth_url }}"
-  NEXTAUTH_SECRET: "{{ karakeep_nextauth_secret }}"
-karakeep_env_vars_base: "{{ common_env_vars_base | combine(karakeep_env_vars_base_custom, recursive=True) }}"
 
-karakeep_chrome_env_vars_base: "{{ common_env_vars_base }}"
+karakeep_chrome_env_vars_base: {}
 
-karakeep_meilisearch_env_vars_base_custom:
+karakeep_meilisearch_env_vars_base:
   MEILI_NO_ANALYTICS: "true"
-  MEILI_MASTER_KEY: "{{ karakeep_meilisearch_master_key }}"
-karakeep_meilisearch_env_vars_base: "{{ common_env_vars_base | combine(karakeep_meilisearch_env_vars_base_custom, recursive=True) }}"
+
+###############################################################################
+# Secrets
+###############################################################################
+
+karakeep_secrets_base:
+  karakeep_nextauth_secret: "{{ karakeep_nextauth_secret }}"
+  karakeep_meilisearch_master_key: "{{ karakeep_meilisearch_master_key }}"
+
+karakeep_container_secrets_base:
+  - karakeep_nextauth_secret,type=env,target=NEXTAUTH_SECRET
+
+karakeep_chrome_container_secrets_base: []
+
+karakeep_meilisearch_container_secrets_base:
+  - karakeep_meilisearch_master_key,type=env,target=MEILI_MASTER_KEY
 
 ###############################################################################
 # Container Labels
