--- a/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/defaults/main.yml
@@ -10,6 +10,9 @@ kometa_volume_config: "{{ kometa_name }}-config"
 
 kometa_env_vars: {}
 
+kometa_secrets: {}
+kometa_container_secrets: []
+
 kometa_container_labels: {}
 
 kometa_quadlet_options: []
