--- a/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/tasks/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/tasks/main.yml
@@ -30,12 +30,26 @@
     - name: "{{ kometa_volume_config }}"
       options: "{{ kometa_volume_config_options | default(omit) }}"
 
+- name: Create secrets
+  containers.podman.podman_secret:
+    name: "{{ item.key }}"
+    data: "{{ item.value }}"
+    state: present
+  become: true
+  loop: "{{ kometa_secrets_base | combine(kometa_secrets, recursive=True) | dict2items }}"
+
 - name: Create kometa container
   containers.podman.podman_container:
     name: "{{ kometa_name }}"
     image: "{{ kometa_image }}:{{ kometa_image_tag }}"
     network: "{{ kometa_name }}.network"
-    env: "{{ kometa_env_vars_base | combine(kometa_env_vars, recursive=True) }}"
+    env: >-
+      {{ common_env_vars_base
+      | combine(kometa_env_vars_base, recursive=True)
+      | combine(kometa_env_vars, recursive=True) }}
+    secrets: >-
+      {{ kometa_container_secrets_base
+      + kometa_container_secrets }}
     volumes:
       - "{{ kometa_volume_config }}:/config"
     labels: "{{ kometa_container_labels_base | combine(kometa_container_labels, recursive=True) }}"
