--- a/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/kometa/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-kometa_env_vars_base: "{{ common_env_vars_base }}"
+kometa_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+kometa_secrets_base: {}
+
+kometa_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
