--- a/collections/ansible_collections/jaredhocutt/homelab/roles/n8n/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/n8n/defaults/main.yml
@@ -19,6 +19,10 @@ n8n_ports:
 n8n_env_vars: {}
 n8n_postgres_env_vars: {}
 
+n8n_secrets: {}
+n8n_container_secrets: []
+n8n_postgres_container_secrets: []
+
 n8n_container_labels: {}
 n8n_postgres_container_labels: {}
 
