--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/defaults/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/defaults/main.yml
@@ -15,6 +15,9 @@ uptime_kuma_ports:
 
 uptime_kuma_env_vars: {}
 
+uptime_kuma_secrets: {}
+uptime_kuma_container_secrets: []
+
 uptime_kuma_container_labels: {}
 
 uptime_kuma_quadlet_options: []
