--- a/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/uptime_kuma/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-uptime_kuma_env_vars_base: "{{ common_env_vars_base }}"
+uptime_kuma_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+uptime_kuma_secrets_base: {}
+
+uptime_kuma_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
