--- a/collections/ansible_collections/jaredhocutt/homelab/roles/wizarr/vars/main.yml
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/wizarr/vars/main.yml
@@ -5,7 +5,15 @@
 # Envrionment Variables
 ###############################################################################
 
-wizarr_env_vars_base: "{{ common_env_vars_base }}"
+wizarr_env_vars_base: {}
+
+###############################################################################
+# Secrets
+###############################################################################
+
+wizarr_secrets_base: {}
+
+wizarr_container_secrets_base: []
 
 ###############################################################################
 # Container Labels
